@@ -1,6 +1,6 @@
 /* QuesoGLC
  * A free implementation of the OpenGL Character Renderer (GLC)
- * Copyright (c) 2002, 2004-2008, Bertrand Coconnier
+ * Copyright (c) 2002, 2004-2009, Bertrand Coconnier
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -25,47 +25,49 @@
 #include "internal.h"
 #include <string.h>
 
+typedef GLboolean (*__glcPatternProcess)(FcFontSet* inFontSet,
+					 FcPattern* inPattern, int inFont,
+					 void* inData);
+struct __GLCdataRec {
+  const __GLCmaster* master;
+  GLint* index;
+};
+typedef struct __GLCdataRec __GLCdata;
 
 
-/* Constructor of the object : it allocates memory and initializes the member
- * of the new object.
- */
-__GLCmaster* __glcMasterCreate(const GLint inMaster,
-			       const __GLCcontext* inContext)
+static int __glcScanFonts(const __GLCcontext* inContext, FcFontSet** outFontSet,
+			  FcPattern** outPattern,
+			  __glcPatternProcess inPatternProcess, void* inData)
 {
-  __GLCmaster* This = NULL;
-  GLCchar32 hashValue =
-	((GLCchar32*)GLC_ARRAY_DATA(inContext->masterHashTable))[inMaster];
+  int font = 0;
   FcObjectSet* objectSet = NULL;
   FcFontSet *fontSet = NULL;
-  FcPattern *pattern = NULL;
-  int i = 0;
+  FcPattern *pattern = FcPatternCreate();
 
-  /* Use Fontconfig to get the list of font files */
-  pattern = FcPatternCreate();
+  /* Use Fontconfig to get the default font files */
   if (!pattern) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
-    return NULL;
+    return -1;
   }
   objectSet = FcObjectSetBuild(FC_FAMILY, FC_FOUNDRY, FC_OUTLINE, FC_SPACING,
-			       NULL);
+			       FC_STYLE, NULL);
   if (!objectSet) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
     FcPatternDestroy(pattern);
-    return NULL;
+    return -1;
   }
   fontSet = FcFontList(inContext->config, pattern, objectSet);
   FcObjectSetDestroy(objectSet);
   FcPatternDestroy(pattern);
   if (!fontSet) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
-    return NULL;
+    return -1;
   }
 
   /* Parse the font set looking for a font with an outline and which hash value
    * matches the hash value of the master we are looking for.
    */
-  for (i = 0; i < fontSet->nfont; i++) {
+  for (font = 0; font < fontSet->nfont; font++) {
     FcBool outline = FcFalse;
     FcChar8* family = NULL;
     int fixed = 0;
@@ -73,33 +75,27 @@ __GLCmaster* __glcMasterCreate(const GLint inMaster,
 #ifdef DEBUGMODE
     FcResult result = FcResultMatch;
 
-    result = FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
+    result = FcPatternGetBool(fontSet->fonts[font], FC_OUTLINE, 0, &outline);
     assert(result != FcResultTypeMismatch);
 #else
-    FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
+    FcPatternGetBool(fontSet->fonts[font], FC_OUTLINE, 0, &outline);
 #endif
-
-    /* Check whether the glyphs are outlines */
     if (!outline)
       continue;
 
-    /* Extract the family name, foundry and spacing informations of the font */
 #ifdef DEBUGMODE
-    result = FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
+    result = FcPatternGetString(fontSet->fonts[font], FC_FAMILY, 0, &family);
     assert(result != FcResultTypeMismatch);
-    result = FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
+    result = FcPatternGetString(fontSet->fonts[font], FC_FOUNDRY, 0, &foundry);
     assert(result != FcResultTypeMismatch);
-    result = FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
+    result = FcPatternGetInteger(fontSet->fonts[font], FC_SPACING, 0, &fixed);
     assert(result != FcResultTypeMismatch);
 #else
-    FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
+    FcPatternGetString(fontSet->fonts[font], FC_FAMILY, 0, &family);
+    FcPatternGetString(fontSet->fonts[font], FC_FOUNDRY, 0, &foundry);
+    FcPatternGetInteger(fontSet->fonts[font], FC_SPACING, 0, &fixed);
 #endif
 
-    /* Create a pattern which only contains the family, spacing and foundry (if
-     * relevant).
-     */
     if (foundry)
       pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
 			       FC_FOUNDRY, FcTypeString, foundry, FC_SPACING,
@@ -111,22 +107,59 @@ __GLCmaster* __glcMasterCreate(const GLint inMaster,
     if (!pattern) {
       __glcRaiseError(GLC_RESOURCE_ERROR);
       FcFontSetDestroy(fontSet);
-      return NULL;
+      return -1;
     }
 
-    /* If the pattern has the same hash value than the master we are looking for
-     * then we have found the master
-     */
-    if (hashValue == FcPatternHash(pattern))
-      break;
+    if (inPatternProcess(fontSet, pattern, font, inData)) {
+      *outPattern = pattern;
+      *outFontSet = fontSet;
+      return font;
+    }
 
     FcPatternDestroy(pattern);
   }
 
-  assert(i < fontSet->nfont);
-  FcFontSetDestroy(fontSet);
+  *outPattern = NULL;
+  *outFontSet = fontSet;
+  return font;
+}
 
-  /* Create the master */
+
+
+static GLboolean __glcCheckHashValue(FcFontSet* GLC_UNUSED_ARG(inFontSet),
+				     FcPattern* inPattern,
+				     int GLC_UNUSED_ARG(inFont), void* inData)
+{
+  GLCchar32 hashValue = *((GLCchar32*)inData);
+
+  if (hashValue == FcPatternHash(inPattern))
+    return GL_TRUE;
+
+  return GL_FALSE;
+}
+
+
+
+/* Constructor of the object : it allocates memory and initializes the member
+ * of the new object.
+ */
+__GLCmaster* __glcMasterCreate(const GLint inMaster,
+			       const __GLCcontext* inContext)
+{
+  __GLCmaster* This = NULL;
+  GLCchar32 hashValue =
+	((GLCchar32*)GLC_ARRAY_DATA(inContext->masterHashTable))[inMaster];
+  FcFontSet *fontSet = NULL;
+  FcPattern *pattern = NULL;
+  int font = __glcScanFonts(inContext, &fontSet, &pattern, __glcCheckHashValue,
+			    &hashValue);
+
+  assert(font < fontSet->nfont);
+
+  FcFontSetDestroy(fontSet);
+  if (font < 0)
+    return NULL;
+
   This = (__GLCmaster*)__glcMalloc(sizeof(__GLCmaster));
   if (!This) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
@@ -154,116 +187,66 @@ void __glcMasterDestroy(__GLCmaster* This)
 
 
 
+static GLboolean __glcFindMasterIndex(FcFontSet* GLC_UNUSED_ARG(inFontSet),
+				      FcPattern* inPattern,
+				      int GLC_UNUSED_ARG(inFont), void* inData)
+{
+  const __GLCmaster* This = ((__GLCdata*)inData)->master;
+  GLint *idx = ((__GLCdata*)inData)->index; 
+  FcBool equal = FcPatternEqual(inPattern, This->pattern);
+
+  if (equal) {
+    if (*idx)
+      (*idx)--;
+    else
+      return GL_TRUE;
+  }
+
+  return GL_FALSE;
+}
+
+
+
 /* Get the style name of the face identified by inIndex  */
 GLCchar8* __glcMasterGetFaceName(const __GLCmaster* This,
 				 const __GLCcontext* inContext,
 				 const GLint inIndex)
 {
-  FcObjectSet* objectSet = NULL;
   FcFontSet *fontSet = NULL;
+  FcPattern *pattern = NULL;
+  GLCchar8* string = NULL;
+  GLCchar8* faceName;
+  GLint idx = inIndex;
+  __GLCdata data = {NULL, NULL};
+  int font = 0;
 #ifdef DEBUGMODE
   FcResult result = FcResultMatch;
 #endif
-  GLCchar8* string = NULL;
-  GLCchar8* faceName;
-  int i = 0;
-  GLint idx = inIndex;
-  FcPattern* pattern = FcPatternCreate();
 
-  /* Use Fontconfig to get the list of font files */
-  if (!pattern) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    return NULL;
-  }
+  data.master = This;
+  data.index = &idx;
 
-  objectSet = FcObjectSetBuild(FC_FAMILY, FC_FOUNDRY, FC_SPACING, FC_OUTLINE,
-			       FC_STYLE, NULL);
-  if (!objectSet) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    FcPatternDestroy(pattern);
-    return NULL;
-  }
-  fontSet = FcFontList(inContext->config, pattern, objectSet);
-  FcObjectSetDestroy(objectSet);
+  font = __glcScanFonts(inContext, &fontSet, &pattern, __glcFindMasterIndex,
+			&data);
+
   FcPatternDestroy(pattern);
-  if (!fontSet) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
+
+  if (font < 0) {
+    FcFontSetDestroy(fontSet);
     return NULL;
   }
 
-  /* Parse the font set looking for a font with an outline and which pattern
-   * matches the pattern of the master we are looking for.
-   */
-  for (i = 0; i < fontSet->nfont; i++) {
-    FcChar8* family = NULL;
-    int fixed = 0;
-    FcChar8* foundry = NULL;
-    FcBool outline = FcFalse;
-    FcBool equal = FcFalse;
-
-    /* Check whether the glyphs are outlines */
-#ifdef DEBUGMODE
-    result = FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-#endif
-
-    if (!outline)
-      continue;
-
-    /* Extract the family name, foundry and spacing informations of the font */
-#ifdef DEBUGMODE
-    result = FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    assert(result != FcResultTypeMismatch);
-    result = FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    assert(result != FcResultTypeMismatch);
-    result = FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-#endif
-
-    /* Create a pattern which only contains the family, spacing and foundry (if
-     * relevant).
-     */
-    if (foundry)
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_FOUNDRY, FcTypeString, foundry, FC_SPACING,
-			       FcTypeInteger, fixed, NULL);
-    else
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_SPACING, FcTypeInteger, fixed, NULL);
-
-    if (!pattern) {
-      __glcRaiseError(GLC_RESOURCE_ERROR);
-      FcFontSetDestroy(fontSet);
-      return NULL;
-    }
-
-    equal = FcPatternEqual(pattern, This->pattern);
-    FcPatternDestroy(pattern);
-    if (equal) {
-      if (idx)
-	idx--;
-      else
-	break;
-    }
-  }
-
-  if (i == fontSet->nfont) {
+  if (font == fontSet->nfont) {
     __glcRaiseError(GLC_PARAMETER_ERROR);
     FcFontSetDestroy(fontSet);
     return NULL;
   }
 
 #ifdef DEBUGMODE
-  result = FcPatternGetString(fontSet->fonts[i], FC_STYLE, 0, &string);
+  result = FcPatternGetString(fontSet->fonts[font], FC_STYLE, 0, &string);
   assert(result != FcResultTypeMismatch);
 #else
-  FcPatternGetString(fontSet->fonts[i], FC_STYLE, 0, &string);
+  FcPatternGetString(fontSet->fonts[font], FC_STYLE, 0, &string);
 #endif
 
 #ifdef __WIN32__
@@ -299,89 +282,42 @@ GLboolean __glcMasterIsFixedPitch(const __GLCmaster* This)
 
 
 
+static GLboolean __glcCountFaces(FcFontSet* GLC_UNUSED_ARG(inFontSet),
+				 FcPattern* inPattern,
+				 int GLC_UNUSED_ARG(inFont), void* inData)
+{
+  const __GLCmaster* This = ((__GLCdata*)inData)->master;
+  GLint *count = ((__GLCdata*)inData)->index; 
+  FcBool equal = FcPatternEqual(inPattern, This->pattern);
+
+  if (equal)
+    (*count)++;
+
+  return GL_FALSE;
+}
+
+
+
 /* Get the face count of the master */
 GLint __glcMasterFaceCount(const __GLCmaster* This,
 			   const __GLCcontext* inContext)
 {
-  FcObjectSet* objectSet = NULL;
   FcFontSet *fontSet = NULL;
   GLint count = 0;
-  int i = 0;
-  FcPattern* pattern = FcPatternCreate();
+  FcPattern* pattern = NULL;
+  __GLCdata data = {NULL, NULL};
+  int font = 0;
 
-  if (!pattern) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    return 0;
-  }
+  data.master = This;
+  data.index = &count;
 
-  objectSet = FcObjectSetBuild(FC_FAMILY, FC_FOUNDRY, FC_SPACING, FC_OUTLINE,
-			       FC_STYLE, NULL);
-  if (!objectSet) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    FcPatternDestroy(pattern);
-    return 0;
-  }
-  fontSet = FcFontList(inContext->config, pattern, objectSet);
-  FcObjectSetDestroy(objectSet);
-  FcPatternDestroy(pattern);
-  if (!fontSet) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    return 0;
-  }
-
-  for (i = 0; i < fontSet->nfont; i++) {
-    FcChar8* family = NULL;
-    int fixed = 0;
-    FcChar8* foundry = NULL;
-    FcBool outline = FcFalse;
-    FcBool equal = FcFalse;
-#ifdef DEBUGMODE
-    FcResult result = FcResultMatch;
-
-    result = FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-#endif
-
-    /* Check whether the glyphs are outlines */
-    if (!outline)
-      continue;
-
-#ifdef DEBUGMODE
-    result = FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    assert(result != FcResultTypeMismatch);
-    result = FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    assert(result != FcResultTypeMismatch);
-    result = FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-#endif
-
-    if (foundry)
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_FOUNDRY, FcTypeString, foundry, FC_SPACING,
-			       FcTypeInteger, fixed, NULL);
-    else
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_SPACING, FcTypeInteger, fixed, NULL);
-
-    if (!pattern) {
-      __glcRaiseError(GLC_RESOURCE_ERROR);
-      FcFontSetDestroy(fontSet);
-      return 0;
-    }
-
-    equal = FcPatternEqual(pattern, This->pattern);
-    FcPatternDestroy(pattern);
-    if (equal)
-      count++;
-  }
+  font = __glcScanFonts(inContext, &fontSet, &pattern, __glcCountFaces, &data);
 
   FcFontSetDestroy(fontSet);
+
+  if (font < 0)
+    return 0;
+
   return count;
 }
 
@@ -465,98 +401,68 @@ const GLCchar8* __glcMasterGetInfo(const __GLCmaster* This,
 
 
 
+static GLboolean __glcFindFamily(FcFontSet* inFontSet,
+				 FcPattern* GLC_UNUSED_ARG(inPattern),
+				 int inFont, void* inData)
+{
+  FcChar8* family = NULL;
+#ifdef DEBUGMODE
+  FcResult result = FcPatternGetString(inFontSet->fonts[inFont], FC_FAMILY, 0,
+				       &family);
+  assert(result != FcResultTypeMismatch);
+#else
+  FcPatternGetString(inFontSet->fonts[inFont], FC_FAMILY, 0, &family);
+#endif
+
+  if (strcmp((const char*)family, (const char*)inData))
+    return GL_FALSE;
+
+  return GL_TRUE;
+}
+
+
+
 /* Create a master on the basis of the family name */
 __GLCmaster* __glcMasterFromFamily(const __GLCcontext* inContext,
 				   const GLCchar8* inFamily)
 {
-  FcObjectSet* objectSet = NULL;
   FcFontSet *fontSet = NULL;
-  int i = 0;
-  FcPattern* pattern = FcPatternCreate();
+  FcPattern* pattern = NULL;
+  __GLCmaster* This = NULL;
+  int font = __glcScanFonts(inContext, &fontSet, &pattern, __glcFindFamily,
+			    (void*)inFamily);
 
-  if (!pattern) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
+  if (font < 0) {
+    if (pattern)
+      FcPatternDestroy(pattern);
+    FcFontSetDestroy(fontSet);
     return NULL;
   }
 
-  objectSet = FcObjectSetBuild(FC_FAMILY, FC_FOUNDRY, FC_OUTLINE, FC_SPACING,
-			       NULL);
-  if (!objectSet) {
+  assert(fontSet);
+
+  if (font == fontSet->nfont) {
+    __glcRaiseError(GLC_PARAMETER_ERROR);
+    if (pattern)
+      FcPatternDestroy(pattern);
+    FcFontSetDestroy(fontSet);
+    return NULL;
+  }
+
+  assert(pattern);
+
+  This = (__GLCmaster*)__glcMalloc(sizeof(__GLCmaster));
+  if (!This) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
+    FcFontSetDestroy(fontSet);
     FcPatternDestroy(pattern);
     return NULL;
   }
-  fontSet = FcFontList(inContext->config, pattern, objectSet);
-  FcObjectSetDestroy(objectSet);
-  FcPatternDestroy(pattern);
-  if (!fontSet) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    return NULL;
-  }
+  memset(This, 0, sizeof(__GLCmaster));
 
-  for (i = 0; i < fontSet->nfont; i++) {
-    FcBool outline = FcFalse;
-    FcChar8* family = NULL;
-    int fixed = 0;
-    FcChar8* foundry = NULL;
-#ifdef DEBUGMODE
-    FcResult result = FcResultMatch;
-
-    result = FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetBool(fontSet->fonts[i], FC_OUTLINE, 0, &outline);
-#endif
-
-    /* Check whether the glyphs are outlines */
-    if (!outline)
-      continue;
-
-#ifdef DEBUGMODE
-    result = FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetString(fontSet->fonts[i], FC_FAMILY, 0, &family);
-#endif
-    if (strcmp((const char*)family, (const char*)inFamily))
-      continue;
-
-#ifdef DEBUGMODE
-    result = FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    assert(result != FcResultTypeMismatch);
-    result = FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-    assert(result != FcResultTypeMismatch);
-#else
-    FcPatternGetString(fontSet->fonts[i], FC_FOUNDRY, 0, &foundry);
-    FcPatternGetInteger(fontSet->fonts[i], FC_SPACING, 0, &fixed);
-#endif
-
-    if (foundry)
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_FOUNDRY, FcTypeString, foundry, FC_SPACING,
-			       FcTypeInteger, fixed, NULL);
-    else
-      pattern = FcPatternBuild(NULL, FC_FAMILY, FcTypeString, family,
-			       FC_SPACING, FcTypeInteger, fixed, NULL);
-
-    if (pattern) {
-      __GLCmaster* This = (__GLCmaster*)__glcMalloc(sizeof(__GLCmaster));
-      if (!This) {
-	__glcRaiseError(GLC_RESOURCE_ERROR);
-	FcFontSetDestroy(fontSet);
-	return NULL;
-      }
-      memset(This, 0, sizeof(__GLCmaster));
-
-      This->pattern = pattern;
-      FcFontSetDestroy(fontSet);
-      return This;
-    }
-  }
-
-  __glcRaiseError(GLC_RESOURCE_ERROR);
+  This->pattern = pattern;
   FcFontSetDestroy(fontSet);
-  return NULL;
+  return This;
 }
 
 
